# gene_hpc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
gtest/: main.cpp
libs/include/: nlohmann  yaml-cpp
multi_thread_read/: 1.txt  main.cpp
work2/: CMakeLists.txt  README.md  conf.json  conf.yml  config.h  logger.h  main.cpp  samtools.h  tcacactcactaagcacacagagaataatgtctagaatct  tmp.sam  utils.h  worker.h
work2/data/: work2.bai  work2.bam
