cmake_minimum_required(VERSION 3.23)
project(gene_hpc)

set(CMAKE_CXX_STANDARD 14)

include_directories(libs/include)
include_directories(libs/include/spdlog)
include_directories(libs/include/spdlog/cfg)
include_directories(libs/include/spdlog/details)
include_directories(libs/include/spdlog/fmt)
include_directories(libs/include/spdlog/fmt/bundled)
include_directories(libs/include/spdlog/sinks)
include_directories(libs/include/yaml-cpp)
include_directories(libs/include/yaml-cpp/contrib)
include_directories(libs/include/yaml-cpp/node)
include_directories(libs/include/yaml-cpp/node/detail)
include_directories(libs/spdlog/bench)
include_directories(libs/spdlog/include)
include_directories(libs/spdlog/include/spdlog)
include_directories(libs/spdlog/include/spdlog/cfg)
include_directories(libs/spdlog/include/spdlog/details)
include_directories(libs/spdlog/include/spdlog/fmt)
include_directories(libs/spdlog/include/spdlog/fmt/bundled)
include_directories(libs/spdlog/include/spdlog/sinks)
include_directories(libs/spdlog/tests)
include_directories(libs/yaml-cpp/include)
include_directories(libs/yaml-cpp/include/yaml-cpp)
include_directories(libs/yaml-cpp/include/yaml-cpp/contrib)
include_directories(libs/yaml-cpp/include/yaml-cpp/node)
include_directories(libs/yaml-cpp/include/yaml-cpp/node/detail)
include_directories(libs/yaml-cpp/src)
include_directories(libs/yaml-cpp/src/contrib)
include_directories(libs/yaml-cpp/test)
include_directories(libs/yaml-cpp/test/gtest-1.11.0/googlemock/include)
include_directories(libs/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock)
include_directories(libs/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/internal)
include_directories(libs/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/internal/custom)
include_directories(libs/yaml-cpp/test/gtest-1.11.0/googlemock/test)
include_directories(libs/yaml-cpp/test/gtest-1.11.0/googletest/include)
include_directories(libs/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest)
include_directories(libs/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal)
include_directories(libs/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/custom)
include_directories(libs/yaml-cpp/test/gtest-1.11.0/googletest/samples)
include_directories(libs/yaml-cpp/test/gtest-1.11.0/googletest/src)
include_directories(libs/yaml-cpp/test/gtest-1.11.0/googletest/test)
include_directories(work2)

add_executable(gene_hpc
        libs/include/spdlog/cfg/argv.h
        libs/include/spdlog/cfg/env.h
        libs/include/spdlog/cfg/helpers-inl.h
        libs/include/spdlog/cfg/helpers.h
        libs/include/spdlog/details/backtracer-inl.h
        libs/include/spdlog/details/backtracer.h
        libs/include/spdlog/details/circular_q.h
        libs/include/spdlog/details/console_globals.h
        libs/include/spdlog/details/file_helper-inl.h
        libs/include/spdlog/details/file_helper.h
        libs/include/spdlog/details/fmt_helper.h
        libs/include/spdlog/details/log_msg-inl.h
        libs/include/spdlog/details/log_msg.h
        libs/include/spdlog/details/log_msg_buffer-inl.h
        libs/include/spdlog/details/log_msg_buffer.h
        libs/include/spdlog/details/mpmc_blocking_q.h
        libs/include/spdlog/details/null_mutex.h
        libs/include/spdlog/details/os-inl.h
        libs/include/spdlog/details/os.h
        libs/include/spdlog/details/periodic_worker-inl.h
        libs/include/spdlog/details/periodic_worker.h
        libs/include/spdlog/details/registry-inl.h
        libs/include/spdlog/details/registry.h
        libs/include/spdlog/details/synchronous_factory.h
        libs/include/spdlog/details/tcp_client-windows.h
        libs/include/spdlog/details/tcp_client.h
        libs/include/spdlog/details/thread_pool-inl.h
        libs/include/spdlog/details/thread_pool.h
        libs/include/spdlog/details/udp_client-windows.h
        libs/include/spdlog/details/udp_client.h
        libs/include/spdlog/details/windows_include.h
        libs/include/spdlog/fmt/bundled/args.h
        libs/include/spdlog/fmt/bundled/chrono.h
        libs/include/spdlog/fmt/bundled/color.h
        libs/include/spdlog/fmt/bundled/compile.h
        libs/include/spdlog/fmt/bundled/core.h
        libs/include/spdlog/fmt/bundled/format-inl.h
        libs/include/spdlog/fmt/bundled/format.h
        libs/include/spdlog/fmt/bundled/locale.h
        libs/include/spdlog/fmt/bundled/os.h
        libs/include/spdlog/fmt/bundled/ostream.h
        libs/include/spdlog/fmt/bundled/printf.h
        libs/include/spdlog/fmt/bundled/ranges.h
        libs/include/spdlog/fmt/bundled/xchar.h
        libs/include/spdlog/fmt/bin_to_hex.h
        libs/include/spdlog/fmt/chrono.h
        libs/include/spdlog/fmt/compile.h
        libs/include/spdlog/fmt/fmt.h
        libs/include/spdlog/fmt/ostr.h
        libs/include/spdlog/fmt/ranges.h
        libs/include/spdlog/fmt/xchar.h
        libs/include/spdlog/sinks/android_sink.h
        libs/include/spdlog/sinks/ansicolor_sink-inl.h
        libs/include/spdlog/sinks/ansicolor_sink.h
        libs/include/spdlog/sinks/base_sink-inl.h
        libs/include/spdlog/sinks/base_sink.h
        libs/include/spdlog/sinks/basic_file_sink-inl.h
        libs/include/spdlog/sinks/basic_file_sink.h
        libs/include/spdlog/sinks/daily_file_sink.h
        libs/include/spdlog/sinks/dist_sink.h
        libs/include/spdlog/sinks/dup_filter_sink.h
        libs/include/spdlog/sinks/hourly_file_sink.h
        libs/include/spdlog/sinks/mongo_sink.h
        libs/include/spdlog/sinks/msvc_sink.h
        libs/include/spdlog/sinks/null_sink.h
        libs/include/spdlog/sinks/ostream_sink.h
        libs/include/spdlog/sinks/qt_sinks.h
        libs/include/spdlog/sinks/ringbuffer_sink.h
        libs/include/spdlog/sinks/rotating_file_sink-inl.h
        libs/include/spdlog/sinks/rotating_file_sink.h
        libs/include/spdlog/sinks/sink-inl.h
        libs/include/spdlog/sinks/sink.h
        libs/include/spdlog/sinks/stdout_color_sinks-inl.h
        libs/include/spdlog/sinks/stdout_color_sinks.h
        libs/include/spdlog/sinks/stdout_sinks-inl.h
        libs/include/spdlog/sinks/stdout_sinks.h
        libs/include/spdlog/sinks/syslog_sink.h
        libs/include/spdlog/sinks/systemd_sink.h
        libs/include/spdlog/sinks/tcp_sink.h
        libs/include/spdlog/sinks/udp_sink.h
        libs/include/spdlog/sinks/win_eventlog_sink.h
        libs/include/spdlog/sinks/wincolor_sink-inl.h
        libs/include/spdlog/sinks/wincolor_sink.h
        libs/include/yaml-cpp/contrib/anchordict.h
        libs/include/yaml-cpp/contrib/graphbuilder.h
        libs/include/yaml-cpp/node/detail/impl.h
        libs/include/yaml-cpp/node/detail/iterator.h
        libs/include/yaml-cpp/node/detail/iterator_fwd.h
        libs/include/yaml-cpp/node/detail/memory.h
        libs/include/yaml-cpp/node/detail/node.h
        libs/include/yaml-cpp/node/detail/node_data.h
        libs/include/yaml-cpp/node/detail/node_iterator.h
        libs/include/yaml-cpp/node/detail/node_ref.h
        libs/include/yaml-cpp/node/convert.h
        libs/include/yaml-cpp/node/emit.h
        libs/include/yaml-cpp/node/impl.h
        libs/include/yaml-cpp/node/iterator.h
        libs/include/yaml-cpp/node/node.h
        libs/include/yaml-cpp/node/parse.h
        libs/include/yaml-cpp/node/ptr.h
        libs/include/yaml-cpp/node/type.h
        libs/spdlog/bench/async_bench.cpp
        libs/spdlog/bench/bench.cpp
        libs/spdlog/bench/formatter-bench.cpp
        libs/spdlog/bench/latency.cpp
        libs/spdlog/bench/utils.h
        libs/spdlog/example/example.cpp
        libs/spdlog/include/spdlog/cfg/argv.h
        libs/spdlog/include/spdlog/cfg/env.h
        libs/spdlog/include/spdlog/cfg/helpers-inl.h
        libs/spdlog/include/spdlog/cfg/helpers.h
        libs/spdlog/include/spdlog/details/backtracer-inl.h
        libs/spdlog/include/spdlog/details/backtracer.h
        libs/spdlog/include/spdlog/details/circular_q.h
        libs/spdlog/include/spdlog/details/console_globals.h
        libs/spdlog/include/spdlog/details/file_helper-inl.h
        libs/spdlog/include/spdlog/details/file_helper.h
        libs/spdlog/include/spdlog/details/fmt_helper.h
        libs/spdlog/include/spdlog/details/log_msg-inl.h
        libs/spdlog/include/spdlog/details/log_msg.h
        libs/spdlog/include/spdlog/details/log_msg_buffer-inl.h
        libs/spdlog/include/spdlog/details/log_msg_buffer.h
        libs/spdlog/include/spdlog/details/mpmc_blocking_q.h
        libs/spdlog/include/spdlog/details/null_mutex.h
        libs/spdlog/include/spdlog/details/os-inl.h
        libs/spdlog/include/spdlog/details/os.h
        libs/spdlog/include/spdlog/details/periodic_worker-inl.h
        libs/spdlog/include/spdlog/details/periodic_worker.h
        libs/spdlog/include/spdlog/details/registry-inl.h
        libs/spdlog/include/spdlog/details/registry.h
        libs/spdlog/include/spdlog/details/synchronous_factory.h
        libs/spdlog/include/spdlog/details/tcp_client-windows.h
        libs/spdlog/include/spdlog/details/tcp_client.h
        libs/spdlog/include/spdlog/details/thread_pool-inl.h
        libs/spdlog/include/spdlog/details/thread_pool.h
        libs/spdlog/include/spdlog/details/udp_client-windows.h
        libs/spdlog/include/spdlog/details/udp_client.h
        libs/spdlog/include/spdlog/details/windows_include.h
        libs/spdlog/include/spdlog/fmt/bundled/args.h
        libs/spdlog/include/spdlog/fmt/bundled/chrono.h
        libs/spdlog/include/spdlog/fmt/bundled/color.h
        libs/spdlog/include/spdlog/fmt/bundled/compile.h
        libs/spdlog/include/spdlog/fmt/bundled/core.h
        libs/spdlog/include/spdlog/fmt/bundled/format-inl.h
        libs/spdlog/include/spdlog/fmt/bundled/format.h
        libs/spdlog/include/spdlog/fmt/bundled/locale.h
        libs/spdlog/include/spdlog/fmt/bundled/os.h
        libs/spdlog/include/spdlog/fmt/bundled/ostream.h
        libs/spdlog/include/spdlog/fmt/bundled/printf.h
        libs/spdlog/include/spdlog/fmt/bundled/ranges.h
        libs/spdlog/include/spdlog/fmt/bundled/xchar.h
        libs/spdlog/include/spdlog/fmt/bin_to_hex.h
        libs/spdlog/include/spdlog/fmt/chrono.h
        libs/spdlog/include/spdlog/fmt/compile.h
        libs/spdlog/include/spdlog/fmt/fmt.h
        libs/spdlog/include/spdlog/fmt/ostr.h
        libs/spdlog/include/spdlog/fmt/ranges.h
        libs/spdlog/include/spdlog/fmt/xchar.h
        libs/spdlog/include/spdlog/sinks/android_sink.h
        libs/spdlog/include/spdlog/sinks/ansicolor_sink-inl.h
        libs/spdlog/include/spdlog/sinks/ansicolor_sink.h
        libs/spdlog/include/spdlog/sinks/base_sink-inl.h
        libs/spdlog/include/spdlog/sinks/base_sink.h
        libs/spdlog/include/spdlog/sinks/basic_file_sink-inl.h
        libs/spdlog/include/spdlog/sinks/basic_file_sink.h
        libs/spdlog/include/spdlog/sinks/daily_file_sink.h
        libs/spdlog/include/spdlog/sinks/dist_sink.h
        libs/spdlog/include/spdlog/sinks/dup_filter_sink.h
        libs/spdlog/include/spdlog/sinks/hourly_file_sink.h
        libs/spdlog/include/spdlog/sinks/mongo_sink.h
        libs/spdlog/include/spdlog/sinks/msvc_sink.h
        libs/spdlog/include/spdlog/sinks/null_sink.h
        libs/spdlog/include/spdlog/sinks/ostream_sink.h
        libs/spdlog/include/spdlog/sinks/qt_sinks.h
        libs/spdlog/include/spdlog/sinks/ringbuffer_sink.h
        libs/spdlog/include/spdlog/sinks/rotating_file_sink-inl.h
        libs/spdlog/include/spdlog/sinks/rotating_file_sink.h
        libs/spdlog/include/spdlog/sinks/sink-inl.h
        libs/spdlog/include/spdlog/sinks/sink.h
        libs/spdlog/include/spdlog/sinks/stdout_color_sinks-inl.h
        libs/spdlog/include/spdlog/sinks/stdout_color_sinks.h
        libs/spdlog/include/spdlog/sinks/stdout_sinks-inl.h
        libs/spdlog/include/spdlog/sinks/stdout_sinks.h
        libs/spdlog/include/spdlog/sinks/syslog_sink.h
        libs/spdlog/include/spdlog/sinks/systemd_sink.h
        libs/spdlog/include/spdlog/sinks/tcp_sink.h
        libs/spdlog/include/spdlog/sinks/udp_sink.h
        libs/spdlog/include/spdlog/sinks/win_eventlog_sink.h
        libs/spdlog/include/spdlog/sinks/wincolor_sink-inl.h
        libs/spdlog/include/spdlog/sinks/wincolor_sink.h
        libs/spdlog/include/spdlog/async.h
        libs/spdlog/include/spdlog/async_logger-inl.h
        libs/spdlog/include/spdlog/async_logger.h
        libs/spdlog/include/spdlog/common-inl.h
        libs/spdlog/include/spdlog/common.h
        libs/spdlog/include/spdlog/formatter.h
        libs/spdlog/include/spdlog/fwd.h
        libs/spdlog/include/spdlog/logger-inl.h
        libs/spdlog/include/spdlog/logger.h
        libs/spdlog/include/spdlog/pattern_formatter-inl.h
        libs/spdlog/include/spdlog/pattern_formatter.h
        libs/spdlog/include/spdlog/spdlog-inl.h
        libs/spdlog/include/spdlog/spdlog.h
        libs/spdlog/include/spdlog/stopwatch.h
        libs/spdlog/include/spdlog/tweakme.h
        libs/spdlog/include/spdlog/version.h
        libs/spdlog/src/async.cpp
        libs/spdlog/src/cfg.cpp
        libs/spdlog/src/color_sinks.cpp
        libs/spdlog/src/file_sinks.cpp
        libs/spdlog/src/fmt.cpp
        libs/spdlog/src/spdlog.cpp
        libs/spdlog/src/stdout_sinks.cpp
        libs/spdlog/tests/catch.hpp
        libs/spdlog/tests/includes.h
        libs/spdlog/tests/main.cpp
        libs/spdlog/tests/test_async.cpp
        libs/spdlog/tests/test_backtrace.cpp
        libs/spdlog/tests/test_cfg.cpp
        libs/spdlog/tests/test_create_dir.cpp
        libs/spdlog/tests/test_daily_logger.cpp
        libs/spdlog/tests/test_dup_filter.cpp
        libs/spdlog/tests/test_errors.cpp
        libs/spdlog/tests/test_eventlog.cpp
        libs/spdlog/tests/test_file_helper.cpp
        libs/spdlog/tests/test_file_logging.cpp
        libs/spdlog/tests/test_fmt_helper.cpp
        libs/spdlog/tests/test_macros.cpp
        libs/spdlog/tests/test_misc.cpp
        libs/spdlog/tests/test_mpmc_q.cpp
        libs/spdlog/tests/test_pattern_formatter.cpp
        libs/spdlog/tests/test_registry.cpp
        libs/spdlog/tests/test_sink.h
        libs/spdlog/tests/test_stdout_api.cpp
        libs/spdlog/tests/test_stopwatch.cpp
        libs/spdlog/tests/test_systemd.cpp
        libs/spdlog/tests/test_time_point.cpp
        libs/spdlog/tests/utils.cpp
        libs/spdlog/tests/utils.h
        libs/yaml-cpp/include/yaml-cpp/contrib/anchordict.h
        libs/yaml-cpp/include/yaml-cpp/contrib/graphbuilder.h
        libs/yaml-cpp/include/yaml-cpp/node/detail/impl.h
        libs/yaml-cpp/include/yaml-cpp/node/detail/iterator.h
        libs/yaml-cpp/include/yaml-cpp/node/detail/iterator_fwd.h
        libs/yaml-cpp/include/yaml-cpp/node/detail/memory.h
        libs/yaml-cpp/include/yaml-cpp/node/detail/node.h
        libs/yaml-cpp/include/yaml-cpp/node/detail/node_data.h
        libs/yaml-cpp/include/yaml-cpp/node/detail/node_iterator.h
        libs/yaml-cpp/include/yaml-cpp/node/detail/node_ref.h
        libs/yaml-cpp/include/yaml-cpp/node/convert.h
        libs/yaml-cpp/include/yaml-cpp/node/emit.h
        libs/yaml-cpp/include/yaml-cpp/node/impl.h
        libs/yaml-cpp/include/yaml-cpp/node/iterator.h
        libs/yaml-cpp/include/yaml-cpp/node/node.h
        libs/yaml-cpp/include/yaml-cpp/node/parse.h
        libs/yaml-cpp/include/yaml-cpp/node/ptr.h
        libs/yaml-cpp/include/yaml-cpp/node/type.h
        libs/yaml-cpp/include/yaml-cpp/anchor.h
        libs/yaml-cpp/include/yaml-cpp/binary.h
        libs/yaml-cpp/include/yaml-cpp/depthguard.h
        libs/yaml-cpp/include/yaml-cpp/dll.h
        libs/yaml-cpp/include/yaml-cpp/emitfromevents.h
        libs/yaml-cpp/include/yaml-cpp/emitter.h
        libs/yaml-cpp/include/yaml-cpp/emitterdef.h
        libs/yaml-cpp/include/yaml-cpp/emittermanip.h
        libs/yaml-cpp/include/yaml-cpp/emitterstyle.h
        libs/yaml-cpp/include/yaml-cpp/eventhandler.h
        libs/yaml-cpp/include/yaml-cpp/exceptions.h
        libs/yaml-cpp/include/yaml-cpp/mark.h
        libs/yaml-cpp/include/yaml-cpp/noexcept.h
        libs/yaml-cpp/include/yaml-cpp/null.h
        libs/yaml-cpp/include/yaml-cpp/ostream_wrapper.h
        libs/yaml-cpp/include/yaml-cpp/parser.h
        libs/yaml-cpp/include/yaml-cpp/stlemitter.h
        libs/yaml-cpp/include/yaml-cpp/traits.h
        libs/yaml-cpp/include/yaml-cpp/yaml.h
        libs/yaml-cpp/src/contrib/graphbuilder.cpp
        libs/yaml-cpp/src/contrib/graphbuilderadapter.cpp
        libs/yaml-cpp/src/contrib/graphbuilderadapter.h
        libs/yaml-cpp/src/binary.cpp
        libs/yaml-cpp/src/collectionstack.h
        libs/yaml-cpp/src/convert.cpp
        libs/yaml-cpp/src/depthguard.cpp
        libs/yaml-cpp/src/directives.cpp
        libs/yaml-cpp/src/directives.h
        libs/yaml-cpp/src/emit.cpp
        libs/yaml-cpp/src/emitfromevents.cpp
        libs/yaml-cpp/src/emitter.cpp
        libs/yaml-cpp/src/emitterstate.cpp
        libs/yaml-cpp/src/emitterstate.h
        libs/yaml-cpp/src/emitterutils.cpp
        libs/yaml-cpp/src/emitterutils.h
        libs/yaml-cpp/src/exceptions.cpp
        libs/yaml-cpp/src/exp.cpp
        libs/yaml-cpp/src/exp.h
        libs/yaml-cpp/src/indentation.h
        libs/yaml-cpp/src/memory.cpp
        libs/yaml-cpp/src/node.cpp
        libs/yaml-cpp/src/node_data.cpp
        libs/yaml-cpp/src/nodebuilder.cpp
        libs/yaml-cpp/src/nodebuilder.h
        libs/yaml-cpp/src/nodeevents.cpp
        libs/yaml-cpp/src/nodeevents.h
        libs/yaml-cpp/src/null.cpp
        libs/yaml-cpp/src/ostream_wrapper.cpp
        libs/yaml-cpp/src/parse.cpp
        libs/yaml-cpp/src/parser.cpp
        libs/yaml-cpp/src/ptr_vector.h
        libs/yaml-cpp/src/regex_yaml.cpp
        libs/yaml-cpp/src/regex_yaml.h
        libs/yaml-cpp/src/regeximpl.h
        libs/yaml-cpp/src/scanner.cpp
        libs/yaml-cpp/src/scanner.h
        libs/yaml-cpp/src/scanscalar.cpp
        libs/yaml-cpp/src/scanscalar.h
        libs/yaml-cpp/src/scantag.cpp
        libs/yaml-cpp/src/scantag.h
        libs/yaml-cpp/src/scantoken.cpp
        libs/yaml-cpp/src/setting.h
        libs/yaml-cpp/src/simplekey.cpp
        libs/yaml-cpp/src/singledocparser.cpp
        libs/yaml-cpp/src/singledocparser.h
        libs/yaml-cpp/src/stream.cpp
        libs/yaml-cpp/src/stream.h
        libs/yaml-cpp/src/streamcharsource.h
        libs/yaml-cpp/src/stringsource.h
        libs/yaml-cpp/src/tag.cpp
        libs/yaml-cpp/src/tag.h
        libs/yaml-cpp/src/token.h
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/internal/custom/gmock-generated-actions.h
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/internal/custom/gmock-matchers.h
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/internal/custom/gmock-port.h
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/internal/gmock-internal-utils.h
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/internal/gmock-port.h
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/internal/gmock-pp.h
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock-actions.h
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock-cardinalities.h
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock-function-mocker.h
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock-matchers.h
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock-more-actions.h
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock-more-matchers.h
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock-nice-strict.h
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock-spec-builders.h
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock.h
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/src/gmock-all.cc
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/src/gmock-cardinalities.cc
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/src/gmock-internal-utils.cc
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/src/gmock-matchers.cc
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/src/gmock-spec-builders.cc
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/src/gmock.cc
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/src/gmock_main.cc
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-actions_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-cardinalities_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-function-mocker_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-internal-utils_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-matchers_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-more-actions_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-nice-strict_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-port_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-pp-string_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-pp_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-spec-builders_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_all_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_ex_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_leak_test_.cc
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_link2_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_link_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_link_test.h
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_output_test_.cc
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_stress_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/custom/gtest-port.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/custom/gtest-printers.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/custom/gtest.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/gtest-death-test-internal.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/gtest-filepath.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/gtest-internal.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/gtest-param-util.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/gtest-port-arch.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/gtest-port.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/gtest-string.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/gtest-type-util.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest-death-test.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest-matchers.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest-message.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest-param-test.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest-printers.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest-spi.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest-test-part.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest-typed-test.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest_pred_impl.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest_prod.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/samples/prime_tables.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample1.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample1.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample10_unittest.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample1_unittest.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample2.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample2.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample2_unittest.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample3-inl.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample3_unittest.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample4.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample4.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample4_unittest.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample5_unittest.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample6_unittest.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample7_unittest.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample8_unittest.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample9_unittest.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-all.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-death-test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-filepath.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-internal-inl.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-matchers.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-port.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-printers.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-test-part.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-typed-test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest_main.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-break-on-failure-unittest_.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-catch-exceptions-test_.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-color-test_.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-death-test-test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-death-test_ex_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-env-var-test_.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-failfast-unittest_.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-filepath-test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-filter-unittest_.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-global-environment-unittest_.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-list-tests-unittest_.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-listener-test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-message-test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-options-test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-output-test_.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-param-test-invalid-name1-test_.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-param-test-invalid-name2-test_.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-param-test-test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-param-test-test.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-param-test2-test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-port-test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-printers-test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-setuptestsuite-test_.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-shuffle-test_.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-test-part-test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-throw-on-failure-test_.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-uninitialized-test_.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest-typed-test2_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest-typed-test_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest-typed-test_test.h
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest-unittest-api_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_all_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_assert_by_exception_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_environment_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_help_test_.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_list_output_unittest_.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_main_unittest.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_no_test_unittest.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_pred_impl_unittest.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_premature_exit_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_prod_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_repeat_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_skip_in_environment_setup_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_skip_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_sole_header_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_stress_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_test_macro_stack_footprint_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_testbridge_test_.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_throw_on_failure_ex_test.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_unittest.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_xml_outfile1_test_.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_xml_outfile2_test_.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_xml_output_unittest_.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/production.cc
        libs/yaml-cpp/test/gtest-1.11.0/googletest/test/production.h
        libs/yaml-cpp/test/integration/emitter_test.cpp
        libs/yaml-cpp/test/integration/encoding_test.cpp
        libs/yaml-cpp/test/integration/error_messages_test.cpp
        libs/yaml-cpp/test/integration/gen_emitter_test.cpp
        libs/yaml-cpp/test/integration/handler_spec_test.cpp
        libs/yaml-cpp/test/integration/handler_test.cpp
        libs/yaml-cpp/test/integration/load_node_test.cpp
        libs/yaml-cpp/test/integration/node_spec_test.cpp
        libs/yaml-cpp/test/node/node_test.cpp
        libs/yaml-cpp/test/binary_test.cpp
        libs/yaml-cpp/test/handler_test.h
        libs/yaml-cpp/test/main.cpp
        libs/yaml-cpp/test/mock_event_handler.h
        libs/yaml-cpp/test/ostream_wrapper_test.cpp
        libs/yaml-cpp/test/parser_test.cpp
        libs/yaml-cpp/test/regex_test.cpp
        libs/yaml-cpp/test/specexamples.h
        libs/yaml-cpp/util/api.cpp
        libs/yaml-cpp/util/parse.cpp
        libs/yaml-cpp/util/read.cpp
        libs/yaml-cpp/util/sandbox.cpp
        work2/config.h
        work2/main.cpp
        work2/samtools.h
        work2/utils.h
        work2/worker.h)
